--- a/auth/index.html
+++ b/auth/index.html
@@ -179,7 +179,7 @@
         console.log(user);
         alert(user.email+" Login successfully!!!");
         // Redirect to the dashboard
-        window.location.href = "dashboard.html"
+        window.location.href = "index.html"
       })
       .catch((error) => {
         const errorCode = error.code;
